--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
-    "org.apache.cordova.geolocation"
-  ]
+    "org.apache.cordova.geolocation",
+    {
+      "locator": "https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git",
+      "id": "cordova-plugin-x-socialsharing"
+    }
+  ],
+  "cordovaPlatforms": []
 }
