--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
       "id": "cordova-plugin-x-socialsharing"
     }
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "ios",
+    "android"
+  ]
 }
