--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
       "locator": "https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git",
       "id": "cordova-plugin-x-socialsharing"
     },
-    "uk.co.workingedge.phonegap.plugin.launchnavigator"
+    "uk.co.workingedge.phonegap.plugin.launchnavigator",
+    "org.apache.cordova.inappbrowser"
   ],
   "cordovaPlatforms": [
     "ios",
