--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "elementtree": "^0.1.6",
     "gulp-util": "^2.2.14",
+    "lodash": "^3.1.0",
+    "plist": "^1.1.0",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
